# FinTracker

./: CMakeLists.txt  README.txt  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
